Fix navbar styles on safari

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,3 +1,7 @@
+main {
+  margin-top: 70px;
+}
+
 #cluster-map {
   width: 100%;
   height: 500px;
